--- a/SdHAnalysis_Example.ipynb
+++ b/SdHAnalysis_Example.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SdH Analysis\n",
+    "----------------------------\n",
+    "### Example of the analysis of Shubnikov-de Haas data measured using TDO in pulsed fields."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
